# jiqi_jetson

src/control_pkg/: CMakeLists.txt  package.xml
src/control_pkg/src/: teleoperate.py
src/jetson_launch/: CMakeLists.txt  jetson.launch  jetson_rviz.launch  package.xml
src/jiqi_zed/: CMakeLists.txt  package.xml
src/jiqi_zed/config/imu_tools/: imu_tools.yaml
src/jiqi_zed/cpp/: CMakeLists.txt
src/jiqi_zed/launch/: jetson_test.launch
src/jiqi_zed/src/: jiqi_zed.cpp
src/kalman_filter/: CMakeLists.txt  kalman_filter_new.py  package.xml
src/obstacle_array_convert/: CMakeLists.txt  package.xml
src/obstacle_array_convert/src/: obstacle_msgs_converter.py
src/zed-ros-wrapper/zed_nodelets/src/zed_nodelet/src/: zed_wrapper_nodelet.cpp
src/zed-ros-wrapper/zed_wrapper/launch/: zed2.launch
src/zed-ros-wrapper/zed_wrapper/params/: common.yaml
src/zed_pkg/: CMakeLists.txt
src/zed_pkg/config/: jiqi_zed.yaml
src/zed_pkg/launch/: jiqi_bringup_jetson.launch
src/zed_pkg/src/: jiqi_zed.cpp  main.cpp
